v1.1.1 2008-03-15
================
NEW STUFF:

BUG FIXES:
- Create Font button would not search all groups to find unknown character when it should have
  only searched within the matching text group

- Launching a .tm file from the Windows shell launches OS, which crashes immediately. (quiqsilver)


v1.1.0 2008-02-22
================
NEW STUFF:
- Table maps using fuzzy fonts can now be created.
  - Decide which fonts will be fuzzy, and create those in a specifc group (e.g. group 1).
    Fonts can be created with the font color as the foreground, or the background color
    as the foreground (inverse fonting).  If using the font color for the foreground, it is
    probably best to make the fonts as thick as possible using large radii.  If using the
    background color as the foreground, a radius of zero probably works best.
  - Set the symbol t1type to "fuzzy" for default tolerance (25%), or to a specific tolerance
    value (0.50 for 50%, 0.33 for 33%, for example).  If this symbol is set to anything besides
    "fuzzy" or a floating point value, then the engine will used the old pixel-by-pixel font
    recognition engine.
  - You can create multiple samples for various characters, and it will help.  6/8/3, for example
    are all so similar that distinguishing fuzzy versions of these is difficult.  Create more
    font records for the various 6's, 8s and 3's will help with the recognition.

- OpenHoldem and OpenScrape now use a unified CTransform class (this is found in the
  transform.cpp/.h files).

- Add Font (CDlgTableMap::OnBnClickedCreateFont):
  - When adding font records via the add font dialog, the selection will now return to the
    previously selected region record, instead of nothing.
  - Known characters are now *not* added to the "Add Font" dialog.
  
- Added nudge buttons to move region around.  (Thanks to the many suggestions for this)

- Added tooltips to the main table map editor dialog.



BUG FIXES: