@@ -6,8 +6,8 @@
 int	const num_z$strings = 3;
 char * const z$strings[3] = { "clientsize", "clientsizemin", "clientsizemax" };
 
-int	const num_s$strings = 55;
-char * const s$strings[55] = { "titletext", "titletext0", "titletext1", "titletext2", "titletext3", "titletext4", "titletext5", "titletext6",
+int	const num_s$strings = 56;
+char * const s$strings[56] = { "titletext", "titletext0", "titletext1", "titletext2", "titletext3", "titletext4", "titletext5", "titletext6",
 							   "titletext7", "titletext8", "titletext9", 
 							   "!titletext", "!titletext0", "!titletext1", "!titletext2", "!titletext3", "!titletext4", "!titletext5", "!titletext6",
 							   "!titletext7", "!titletext8", "!titletext9", 
@@ -15,7 +15,7 @@ char * const s$strings[55] = { "titletext", "titletext0", "titletext1", "titlete
 							   "ttlimits7", "ttlimits8", "ttlimits9", 
 							   "c0limits", "c0limits0", "c0limits1", "c0limits2", "c0limits3", "c0limits4", "c0limits5", "c0limits6", "c0limits7", 
 							   "c0limits8", "c0limits9", 
-							   "sitename", "nchairs", "reseller", "mechanic", "chairconfig", "swagtextmethod", "defaultlabels",
+							   "sitename", "network", "nchairs", "reseller", "mechanic", "chairconfig", "swagtextmethod", "defaultlabels",
 							   "t0type", "t1type", "t2type", "t3type" };
 
 int	const num_r$strings = 337;
